// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rgpd Cron removeInactiveUsers() should disable users that did not use the app for 2 years 1`] = `
Object {
  "_id": Anything,
  "active": false,
  "disable": true,
  "email": Anything,
  "firstName": "",
  "hashPassword": "",
  "jwt": null,
  "lastName": "",
  "profileToComplete": false,
  "roles": Array [
    "user",
  ],
  "signupAt": 2020-12-12T00:00:00.000Z,
}
`;

exports[`Rgpd Cron removeInactiveUsers() should disable users that did not use the app for 2 years 2`] = `
Object {
  "_id": Anything,
  "active": false,
  "disable": true,
  "email": Anything,
  "firstName": "",
  "hashPassword": "",
  "jwt": null,
  "lastName": "",
  "profileToComplete": false,
  "roles": Array [
    "user",
  ],
  "signupAt": 2020-12-12T00:00:00.000Z,
}
`;

exports[`Rgpd Cron removeInactiveUsers() should disable users that did not use the app for 2 years 3`] = `
Object {
  "_id": Anything,
  "active": true,
  "email": Anything,
  "firstName": "Prénom",
  "hashPassword": "HASH_PASSWORD",
  "jwt": null,
  "lastName": "NOM",
  "profileToComplete": false,
  "roles": Array [
    "user",
  ],
  "signupAt": 2024-01-02T00:00:00.000Z,
}
`;

exports[`Rgpd Cron removeInactiveUsers() should notify through mattermost 1`] = `
Array [
  Array [
    "https://mattermost.incubateur.net/hooks/qefuswbp9fybdjf97yqxo93cqr",
    Object {
      "channel": "datasubvention---bizdev",
      "icon_emoji": "door",
      "text": "[dev] Les comptes suivants ont été supprimés pour inactivité trop longue.

- Prénom NOM (old-user1@mail.com)
- Prénom NOM (old-user2@mail.com) 
N'oubliez pas de supprimer toutes leurs données !",
      "username": "Suppression de comptes",
    },
  ],
]
`;
